--- a/posts/software/docker/docker_notes.qmd
+++ b/posts/software/docker/docker_notes.qmd
@@ -681,6 +681,103 @@ To overwrite the argument value in the build command:
 docker build —build-arg DEFAULT_PORT=69
 ```
 
+# 5. Networking
+
+Docker networking [cheat sheet](Cheat-Sheet-Networks-Requests.pdf).
+
+## 5.1. Types of Communication
+We may want to communicate from our container to:
+
+- Another container
+- An external service (such as a website)
+- Our host machine
+
+
+It is best practice to have a **single responsibility per container**. 
+So if we have a web server and a database, those should be two separate containers that can communicate with each other, rather than one monolith container. 
+
+If we were to just lump everything in one container, that’s essentially the same as lumping everything into a VM, so we’ve lost the modularity benefit of Docker. 
+We’d need to rebuild the image and run a new container whenever anything changes anywhere. 
+
+
+### 5.1.1. Container to Web Communication 
+
+Out of the box, this works from containers. 
+You don’t need any special set up to be able to send requests to a web page or web API from the container. 
+
+
+### 5.1.2. Container to Host Machine Communication 
+
+Replace `localhost` with `host.docker.internal`.
+
+This tells Docker that we are actually referring to the host machine, and Docker will replace this with the IP address of the host machine as seen from inside the container. 
+
+So we just need to change our code so that any endpoints that are pointing at `localhost` get “translated” by Docker. 
+
+
+### 5.1.3. Container to Container Communication 
+
+If we `inspect` the container we want to connect to, we can see its IP address under `NetworkSettings`.
+
+We can replace `localhost` with the IP address of the container in our code with connects to it. 
+
+But this is cumbersome and impractical. We need to inspect the IP address of container B, change our code for application A so that it references this IP address, then rebuild image A before we can finally run container A. 
+
+**Container networks** simplify this. 
+
+
+## 5.2. Docker Container Networks
+
+We can run multiple containers in the same `network` with:
+```bash
+docker run —network <network_name> 
+```
+
+All containers within a network can communicate with each other and all IP addresses are automatically resolved. 
+
+We need to explicitly **create the network** before we can use it. Docker does not automatically do this. To create a network called my-network:
+```bash
+docker network create my-network
+```
+
+We can **list** networks with:
+```bash
+docker network ls
+```
+
+To communicate with another container in the network, just replace `localhost` in the URL with the **target container name**. Docker will automatically translate the IP address. 
+
+We don’t need to publish a port (with the -`p` flag) if the only connections are between containers in the network. We only need to publish a port when we want to communicate with a container from *outside the network*, such as from our host machine. 
+
+
+## 5.3. Network Drivers
+Docker supports different network drivers, which we can set with the `--driver` argument when creating the network. 
+
+The driver options are:
+
+- `bridge` - This lets containers find each other by name when in the same network. This is the default driver and most common use case. 
+- `host` - For standalone containers, isolation between container and host system is removed (i.e. they share localhost as a network).
+- `overlay` - Multiple Docker daemons (i.e. Docker running on different machines) are able to connect with each other. Only works in "Swarm" mode which is a dated / almost deprecated way of connecting multiple containers.
+- `macvlan`: You can set a custom MAC address to a container - this address can then be used for communication with that container.
+- `none` - All networking is disabled.
+
+
+You can also install third party plugins to add other behaviours and functionality.
+
+
+## 5.4. How Docker Resolves IP Addresses
+We've seen that, depending on the type of networking, we can refer to any of the following in our source code, and Docker will translate this to the correct IP address:
+```
+localhost
+host.docker.internal
+container-name
+```
+
+Docker owns the entire environment in which it runs. When it sees an outgoing request with one of the “translatable” names, it will replace that placeholder in the URL with the relevant IP address. 
+
+The source code isn’t changed. The translation only happens for outbound requests from inside the container / network. 
+
+
 # References
 
 - "Docker & Kubernetes: The Practical Guide" [Udemy course](https://www.udemy.com/course/docker-kubernetes-the-practical-guide/)
